--- a/packages/reactui/public/index.html
+++ b/packages/reactui/public/index.html
@@ -2,10 +2,15 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" href="icons/favicon-color-16x16.png" type="image/png">
     <title>FlexiGPT ReactUI</title>
+    <script>
+      window.__ICON_PATHS__ = {
+          icon36x36: "icons/favicon-color-36x36.png",
+          icon16x16: "icons/favicon-color-16x16.png"
+      };
+    </script>
   </head>
   <body>
     <div id="root"></div>
